--- a/sample/opencl/Makefile
+++ b/sample/opencl/Makefile
@@ -1,5 +1,5 @@
 all:
 	gcc -I../../include \
 		-o test test.c \
-		-L../../ -lcl2hsa \
+		-L../.. -lcl2hsa \
 		-L$(HSA_RUNTIME_PATH)/lib -lhsa-runtime64
